xin chào các bạn

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>RTCa</title>
 
-	
+
 		<link rel="shortcut icon" href="assets/images/favicon.svg" />
 
 		<!-- *************
@@ -27,7 +27,7 @@
 		<!-- Page wrapper start -->
 		<app-root></app-root>
 		<!-- Page wrapper end -->
-
+    <h1>hellooooooooooooooooooooooooooooooooooooooooooooooooo</h1>
 		<!-- *************
 			************ JavaScript Files *************
 		************* -->
