--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		<app-root></app-root>
 		<!-- Page wrapper end -->
     <h1>đây là push của nem</h1>
-
+    <h2>xin chào các bạn</h2>
 		<!-- *************
 			************ JavaScript Files *************
 		************* -->
