--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,22 @@
 		<link rel="stylesheet" href="assets/fonts/bootstrap/bootstrap-icons.css" />
 		<link rel="stylesheet" href="assets/css/main.min.css" />
 
+		
 		<!-- *************
 			************ Vendor Css Files *************
 		************ -->
 
 		<!-- Scrollbar CSS -->
 		<link rel="stylesheet" href="assets/vendor/overlay-scroll/OverlayScrollbars.min.css" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 
 	<body>
 		<!-- Page wrapper start -->
 		<app-root></app-root>
 		<!-- Page wrapper end -->
-    <h1>đây là push của nem</h1>
 
 		<!-- *************
 			************ JavaScript Files *************
@@ -46,6 +49,10 @@
 
 		<!-- Custom JS files -->
 		<script src="assets/js/custom.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+		<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 	</body>
 
 </html>
