--- a/src/index.html
+++ b/src/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>RTCa</title>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>RTCa</title>
+	
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" … />
 
-
-		<link rel="shortcut icon" href="assets/images/favicon.svg" />
-
-		<!-- *************
+	<!-- *************
 			************ CSS Files *************
 		************* -->
-		<link rel="stylesheet" href="assets/fonts/bootstrap/bootstrap-icons.css" />
-		<link rel="stylesheet" href="assets/css/main.min.css" />
+	<link rel="stylesheet" href="assets/fonts/bootstrap/bootstrap-icons.css" />
+	<link rel="stylesheet" href="assets/css/main.min.css" />
 
-		<!-- *************
+	<!-- *************
 			************ Vendor Css Files *************
 		************ -->
 
-		<!-- Scrollbar CSS -->
-		<link rel="stylesheet" href="assets/vendor/overlay-scroll/OverlayScrollbars.min.css" />
-	</head>
+	<!-- Scrollbar CSS -->
+	<link rel="stylesheet" href="assets/vendor/overlay-scroll/OverlayScrollbars.min.css" />
+</head>
 
-	<body>
-		<!-- Page wrapper start -->
-		<app-root></app-root>
-		<!-- Page wrapper end -->
-    <h1>đây là push của nem</h1>
+<body>
+	<!-- Page wrapper start -->
+	<app-root></app-root>
+	<!-- Page wrapper end -->
+	
 
-		<!-- *************
+	<!-- *************
 			************ JavaScript Files *************
 		************* -->
-		<!-- Required jQuery first, then Bootstrap Bundle JS -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<!-- Required jQuery first, then Bootstrap Bundle JS -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/bootstrap.bundle.min.js"></script>
 
-		<!-- *************
+	<!-- *************
 			************ Vendor Js Files *************
 		************* -->
 
-		<!-- Overlay Scroll JS -->
-		<script src="assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-		<script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
+	<!-- Overlay Scroll JS -->
+	<script src="assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
+	<script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
 
-		<!-- Custom JS files -->
-		<script src="assets/js/custom.js"></script>
-	</body>
+	<!-- Custom JS files -->
+	<script src="assets/js/custom.js"></script>
+</body>
 
 </html>
